# bytebuffer

./: .gitignore  CMakeLists.txt  README.md  makefile
app/: app.cc
lib/: bbuffer.cc  bbuffer.hh
src/: bbuffer.cpp  bbuffer.h  bytebuffer.cpp  bytebuffer.h  main.cpp
